Fix a wrong buffer size to avoid stack corruption

[Bug #15986]